force-app/main/default/objects/custom_create294__c/custom_create294__c.object-meta.xml
<CustomObject>
    <label>Custom created object294</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects294</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>