force-app/main/default/objects/custom_create294__c/fields/custom_create_294field590__c.field-meta.xml
<CustomField>
    <fullName>custom_create_294field590__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 294field590</label>
    <type>Checkbox</type>
</CustomField>